2009-07-03  Scott James Remnant  <scott@netsplit.com>

	* init/tests/test_control.c (test_emit_event): Directly acess
	the number from an NihDBusError

	* dbus/com.ubuntu.Upstart.xml: Add a "version" property to obtain
	the version of the init daemon, and a "log_priority" property to
	get and set the daemon's log priority.
	* init/control.c (control_get_version, control_get_log_priority)
	(control_set_log_priority): Methods to support the new properties
	* init/control.h: Prototypes.
	* init/tests/test_control.c (test_get_version)
	(test_get_log_priority, test_set_log_priority): Add tests for the
	property accessor functions.

2009-07-02  Scott James Remnant  <scott@netsplit.com>

	* dbus/Upstart.conf: Need to adjust the security configuration
	* dbus/upstart.h: And the constants as well.

	* dbus/com.ubuntu.Upstart.xml,
	* dbus/com.ubuntu.Upstart.Job.xml,
	* dbus/com.ubuntu.Upstart.Instance.xml: Now we don't hardcode the
	interface name anywhere, we can version it properly.
	* init/Makefile.am ($(com_ubuntu_Upstart_OUTPUTS)): 
	($(com_ubuntu_Upstart_Job_OUTPUTS)): 
	($(com_ubuntu_Upstart_Instance_OUTPUTS)): Update default interface
	names.
	* util/Makefile.am ($(com_ubuntu_Upstart_OUTPUTS)): 
	($(com_ubuntu_Upstart_Job_OUTPUTS)): 
	($(com_ubuntu_Upstart_Instance_OUTPUTS)): Update here too.

	* dbus/Makefile.am (EXTRA_DIST): Make sure we distribute it
	* dbus/upstart.h: Add a header file with the usual D-Bus constants.
	* init/control.h: Drop CONTROL_ROOT, replace with DBUS_PATH_UPSTART
	* init/control.c (control_server_open, control_bus_open)
	(control_register_all): Replace CONTROL_* constants with the new ones
	(control_get_job_by_name): Use DBUS_INTERFACE_UPSTART when constructing
	error names.
	* init/job_class.c (job_class_new, job_class_register)
	(job_class_unregister): Construct paths using DBUS_PATH_UPSTART
	(job_class_get_instance)
	(job_class_get_instance_by_name, job_class_start)
	(job_class_stop, job_class_restart): Use DBUS_INTERFACE_UPSTART to